# chimera-ascom

./: pyproject.toml
chimera_ascom/instruments/: ascomcamera.py  ascomtelescope.py
