[project]
name = "chimera-ascom"
version = "0.2"
description = "Chimera - Observatory Automation System"
readme = "README.rst"
license = "GPL-2.0-or-later"
authors = [
    { name = "Paulo Henrique Silva", email = "ph.silva@gmail.com" },
    { name = "William Schoenell", email = "wschoenell@gmail.com" },
]
urls = { "homepage" = "https://chimera.readthedocs.org", "source" = "https://github.com/astroufsc/chimera" }

requires-python = ">=3.12"
dependencies = [
    "chimera",
    "pywin32; sys_platform == 'win32'",
]

[tool.uv.sources]
chimera = { path = "../chimera" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
]

[dependency-groups]
docs = ["furo>=2024.8.6", "sphinx>=8.1.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
